--- a/daftarpustaka.html
+++ b/daftarpustaka.html
@@ -60,69 +60,13 @@
     </header>
     <!-- End Header -->
 
-    <!-- ======= Hero Section ======= -->
-    <!-- ======= Hero Slider Section ======= -->
-    <section id="hero-slider" class="hero-slider mt-3">
-        <div class="container-fluid" data-aos="fade-in">
-            <div class="row">
-                <div class="col-12">
-                    <div class="swiper sliderFeaturedPosts">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('./assets/img/portfolio/rumah-honai-1.jpg');">
-                                    <div class="img-bg-inner">
-                                        <h2>Modul Pembelajaran Etnomatematika Berbasis Website Untuk Meningkatkan Kemampuan Literasi Matematis</h2>
-
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('https://asset-a.grid.id/crop/0x0:0x0/x/photo/2022/08/13/6-budaya-indonesia-yang-terkenal-20220813022716.jpg');">
-                                    <div class="img-bg-inner">
-                                        <h2>Indonesia memiliki keanekaragaman budaya yang merupakan sebuah keindahan.</h2>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('https://ik.imagekit.io/tvlk/blog/2021/01/Tari-Saman-shutterstock_513759277-1024x680.jpeg?tr=dpr-2,w-675');">
-                                    <div class="img-bg-inner">
-                                        <h2>Etnomatematika merupakan kajian yang mengaitkan hubungan antara matematika dan budaya. </h2>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('./assets/img/portfolio/siger-1.webp');">
-                                    <div class="img-bg-inner">
-                                        <h2>Website ini merupakan bahan ajar yang dikembangkan untuk dapat menumbuhkan kecintaan dan kebanggaan terhadap budaya Indonesia.</h2>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="custom-swiper-button-next">
-                            <span class="bi-chevron-right"></span>
-                        </div>
-                        <div class="custom-swiper-button-prev">
-                            <span class="bi-chevron-left"></span>
-                        </div>
-
-                        <div class="swiper-pagination"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End Hero Slider Section -->
-
     <main id="main">
 
         <!-- ======= Why Us Section ======= -->
-        <section id="why-us" class="why-us section-bg">
+        <section id="why-us" class="why-us section-bg mt-5 mb-3">
             <div class="container" data-aos="fade-up">
                 <div class="section-title">
-                    <h2>Pendahuluan</h2>
+                    <h2>Daftar Pustaka</h2>
                 </div>
                 <div class="card shadow">
                     <div class="card-body p-4">
@@ -146,83 +90,11 @@
             </div>
         </section>
         <!-- End Why Us Section -->
-        <section id="contact" class="contact mb-3 section-bg">
-            <div class="container" data-aos="fade-up">
-                <div class="section-title">
-                    <h2>Tabel 1. Capaian Pembelajaran dan Tujuan Pembelajaran </h2>
-                </div>
-                <div class="row">
-                    <div class="col d-flex align-items-stretch">
-                        <div class="info">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Capain Pembelajaran</th>
-                                        <th scope="col">Tujuan Pembelajaran</th>
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-
-                                        <td rowspan="3">Di akhir fase D, peserta didik dapat membaca, menulis,dan membandingkan bilangan bulat, bilangan rasional dan irasional, bilangan desimal, bilangan berpangkat bulat dan akar, bilangan dalam notasi ilmiah. Mereka
-                                            dapat menerapkan operasi aritmetika pada bilangan real, dan memberikan estimasi/perkiraan dalam menyelesaikan masalah termasuk berkaitan dengan (literasi finansial). Peserta didik dapat menggunakan faktorisasi
-                                            prima dan pengertian rasio (skala, proporsi, dan laju perubahan) dalam penyelesaian masalah. </td>
-                                        <td>
-                                            1. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (skala, proporsi) dalam kehidupan sehari-hari.
-                                        </td>
-                                    </tr>
-                                    <tr>
-
-                                        <td>2. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (laju perubahan) dalam keseharian murid</td>
-                                    </tr>
-                                    <tr>
-
-                                        <td>3. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep perbandingan senilai dan berbalik nilai dalam keseharian murid. </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-
-                    </div>
-
-
-                </div>
-
-            </div>
-        </section>
-
     </main>
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer">
-
-        <!-- <div class="footer-newsletter">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                        <h4>Join Our Newsletter</h4>
-                        <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <!-- 
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col footer-contact">
-                        <h5>Tim Pengembang Website</h5>
-
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
+    <footer id="footer" class="position-relative bottom-0">
         <div class="container footer-bottom clearfix">
             <div class="copyright">
                 &copy; Copyright 2023 - <strong><span>Tim Pengembang</span></strong>. IAIN Metro
@@ -235,8 +107,6 @@
     <!-- End Footer -->
 
     <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
     <!-- Vendor JS Files -->
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
