--- a/petunjuk.html
+++ b/petunjuk.html
@@ -120,51 +120,49 @@
         <!-- ======= Services Section ======= -->
         <section id="services" class="services section-bg mb-3">
             <div class="container" data-aos="fade-up">
-
                 <div class="section-title">
-                    <h2>Petunjuk Penggunaan website</h2>
-                    <p>Modul ini merupakan bahan ajar yang Ananda gunakan untuk memahami konsep segiempat dan segitiga.</p>
+                    <h2>Petunjuk Penggunaan Modul</h2>
                 </div>
-
                 <div class="row">
-                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch  mt-4" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-xl-3 col-md-6 d-flex   mt-4" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                            <p>Aktivitas pembelajaran yang Ananda kerjakan akan menuntun Ananda memahami konsep segiempat dan segitiga.</p>
+                            <p><b>-</b> Berdoa sebelum memulai kegiatan pembelajaran</p>
+                            <p><b>-</b>Cermati deskripsi modul pembelajaran.</p>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-xl-3 col-md-6 d-flex mt-4 " data-aos="zoom-in" data-aos-delay="200">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-file"></i></div>
-                            <p>Ananda diizinkan untuk berdiskusi dengan teman sebaya dalam melakukan aktivitas pembelajaran melalui platform gmeet, zoom, video call. Bukan untuk mencontoh hasil pekerjaan temannya, tapi saling berdiskusi untuk menemukan jawaban
-                                yang tepat.</p>
+                            <p>Pahami capaian pembelajaran dan tujuan pembelajaran dari setiap aktivitas pembelajaran. </p>
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="300">
+                    <div class="col-xl-3 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="300">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-tachometer"></i></div>
-                            <p>Kerjakan aktivitas pembelajaran di lembar kertas/buku latihan yang berbeda, jangan lupa untuk membubuhi tanda tangan Ayah dan Bunda, setelah itu foto/scan dengan jelas dan kumpulkan di link Gform yang sudah disediakan oleh
-                                Bapak/Ibu Guru.</p>
+                            <p>Cermati dan selesaikan setiap aktivitas pembelajaran. Pastikan Ananda memahami setiap bagian dengan baik baru melanjutkan pada aktivitas pembelajaran selanjutnya.</p>
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="400">
+                    <div class="col-xl-3 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="400">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-layer"></i></div>
-                            <p>Kerjakalah setiap aktivitas dengan cepat, baik, dan benar. Pastikan Ananda memahami setiap bagian dengan baik baru melanjutkan pada aktivitas pembelajaran selanjutnya.</p>
+                            <p><b>-</b>Kenali konsep matematika pada objek budaya dibagian video pembelajaran.</p>
+                            <p><b>-</b>Lengkapi setiap bagian di aktivitas pembelajaran dengan cermat dan tepat.</p>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="400">
+                    <div class="col-xl-3 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="400">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-layer"></i></div>
-                            <p>Setiap hasil aktivitas pembelajaran dan evaluasi akan dikoreksi oleh Bapak/Ibu guru. Hasil koreksian akan dikembalikan dengan Ananda, jangan sungkan untuk menanyakan poin-poin yang masih belum benar sebagai pembelajaran.</p>
+                            <p>Selesaikan bagian evaluasi jika setiap materi telah dipahami.</p>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="400">
+                    <div class="col-xl-3 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="400">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-layer"></i></div>
-                            <p>Baiklah, selamat melakukan aktivitas pembelajaran, jangan lupa berdoa.</p>
+                            <p><b>-</b>Tanyakan kepada guru jika mengalami kesulitan.</p>
+                            <p><b>~</b>Baiklah, selamat belajar<b>~</b></p>
                         </div>
                     </div>
 
@@ -208,5 +206,7 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+
+</html>
 
 </html>
